@@ -66,6 +66,7 @@ public:
   virtual int     AppendImage(KImage *inImage) {return 1;};
 	virtual int     WriteSection(KImage * inImage, int inSect) {return 1;};
   virtual	void    SetPixelSpacing(float pixel);
+  virtual float   GetPixelSpacing() { return mPixelSpacing; };
   virtual void    SetUpdateTimePerSect(float inVal) { mUpdateTimePerSect = inVal; };
   virtual int     AddTitle(const char *inTitle);
   virtual int     CheckMontage(MontParam *inParam) {return 0;}; 
